--- a/public/css/default.css
+++ b/public/css/default.css
@@ -789,7 +789,8 @@ input[type="checkbox"] {
 --------------------------------------------------------------- */
 .row {
   width: 96%;
-  max-width: 1020px;
+  /* max-width: 1020px; */
+  max-width: 1220px;
   margin: 0 auto;
 }
 /* fixed width for IE8 */
@@ -1189,12 +1190,35 @@ properly.
   text-align: center !important;
 }
 
-@media screen and (min-width: 1300px) {
+@media only screen and (min-width: 900px) {
   .portfolio-item .portfolio-item-meta h5 {
-    font: 26px/31px "opensans-bold", sans-serif !important;
+    font: 14px/20px "opensans-bold", sans-serif !important;
   }
   .portfolio-item .portfolio-item-meta p {
-    font: 16px/30px "opensans-light", sans-serif !important;
+    font-size: 1.2vw !important;
+    line-height: 1.8vw !important;
+  }
+  .portfolio-item .portfolio-item-meta {
+    padding: 2.8vw !important;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .portfolio-item .portfolio-item-meta h5 {
+    font: 18px/22px "opensans-bold", sans-serif !important;
+  }
+  .portfolio-item .portfolio-item-meta p {
+    font-size: 14px !important;
+    line-height: 20px !important;
+  }
+}
+
+@media screen and (min-width: 1350px) {
+  .portfolio-item .portfolio-item-meta h5 {
+    font: 24px/29px "opensans-bold", sans-serif !important;
+  }
+  .portfolio-item .portfolio-item-meta p {
+    font: 14px/26px "opensans-light", sans-serif !important;
     font-weight: bold !important;
   }
 }
