--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1211,6 +1211,9 @@ properly.
     font-size: 14px !important;
     line-height: 20px !important;
   }
+  .portfolio-item .portfolio-item-meta {
+    padding: 35px !important;
+  }
 }
 
 @media screen and (min-width: 1350px) {
